--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <section class="games-grid">
     <!-- Game Card 1 -->
-    <a href="./Game1/" class="game-card" style="text-decoration:none; color:inherit; display:block;">
+    <a href="./joc1/" class="game-card" style="text-decoration:none; color:inherit; display:block;">
       <div class="game-thumb"><img src="data:image/png;base64,REPLACE_BASE64_DATA" alt="Thumbnail" style="width:100%; height:100%; object-fit:cover; border-radius:10px;" /></div>
       <h2>Game 1</h2>
       <p>A short description of the game.</p>
