--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
   <script>
     // --- Playlist ---
     const playlist = [
-      "midi/orchestral_g0lden.mid.mid",
-      "midi/song2.mid",
-      "midi/song3.mid"
+      "midi/golden.mid",
+      "midi/bunny.mid",
+      "midi/tsurupettan.mid"
     ];
 
     let current = 0;
