--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     // --- Playlist ---
     const playlist = [
       "midi/golden.mid",
-      "midi/bunny.mid",
+      "midi/silhouette.mid",
       "midi/tsurupettan.mid"
     ];
 
